--- a/member-service/src/main/resources/application.yml
+++ b/member-service/src/main/resources/application.yml
@@ -31,7 +31,7 @@ spring:
     oauth2:
       resourceserver:
         jwt:
-          issuer-uri: http://localhost:8080/realms/service-app-realm
+          issuer-uri: http://keycloak:8080/realms/service-app-realm
 
   rabbitmq:
     host: localhost
